# my-trading-work-3

./: news_componete_still_missing.md
vinu-features/: .env.example  .gitignore  README.md  pyproject.toml
vinu-features/docs/: complete_guide_features.md
vinu-features/docs/book/: ARCHITECTURE.md
vinu-features/tests/: conftest.py  test_api.py  test_compute_registry.py  test_engine.py  test_feature_spec.py  test_indicators.py  test_presets.py  test_registry.py  test_worker.py
vinu-features/vinu_features/: __init__.py  cli.py  config.py  service.py
vinu-features/vinu_features.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
vinu-features/vinu_features/client/: stock_price.py
vinu-features/vinu_features/compute/: README_TEMPLATE.md  feature_catalog.py  feature_spec.py  registry.py
vinu-features/vinu_features/engine/: engine.py  manifest.py  splits.py
vinu-features/vinu_features/presets/: registry.py
vinu-features/vinu_features/server/: app.py  routes_features.py  routes_requests.py  schemas.py
vinu-features/vinu_features/storage/: __init__.py  base.py  models.py  sqlite_backend.py
vinu-features/vinu_features/worker/: runner.py
vinu-news/: .dockerignore  .env  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
vinu-news/data/: news.db
vinu-news/docs/: INDEX.md  README.md  complete_guide_news_analysis.md  new_gap__filterin.md  news_componete_still_missing.md  news_derived_tables.md
vinu-news/docs/book/: ARCHITECTURE.md  _TEMPLATE.md
vinu-news/tests/: test_api.py  test_cli_continuous.py  test_filter.py  test_ingest_filter.py  test_llm_analyze.py  test_price_reaction.py  test_settings_watchlist.py  test_ticker_news_provider.py  test_tier_filter.py  test_watchlist_sync.py
vinu-news/tests/analysis/: test_cluster_gates.py  test_cosine_dedup.py  test_enrichment.py  test_fts.py  test_headline_cleanup.py  test_ner.py  test_persist.py  test_post_process.py  (+4 more)
vinu-news/vinu_news/: __init__.py  cli.py  config.py  net.py  service.py
vinu-news/vinu_news.egg-info/: SOURCES.txt  requires.txt  top_level.txt
vinu-stock-price/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
vinu-stock-price/docs/: INDEX.md  README.md  complete_guide_stock_price.md
vinu-stock-price/how-to/: README.md
vinu-stock-price/tests/: __init__.py  test_aggregate.py  test_api.py  test_catalog.py  test_gap_validation.py  test_indicators.py  test_parquet_io.py  test_provider_retry.py  test_providers_mock.py  test_watchlist_sync.py
vinu-stock-price/vinu_stock/: __init__.py  cli.py  config.py  service.py
vinu-stock-price/vinu_stock_price.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+415 files in other folders)
