[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vinu-features"
version = "0.1.0"
description = "Feature run registry, worker, and parquet artifacts from vinu-stock-price OHLCV"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.0",
  "python-dotenv>=1.0",
  "httpx>=0.27",
  "pyarrow>=15.0",
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
ml = ["scikit-learn>=1.3", "lightgbm>=4.0", "xgboost>=2.0", "catboost>=1.2"]

[project.scripts]
vinu-features = "vinu_features.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vinu_features*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
