[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vinu-stock-price"
version = "0.1.0"
description = "Historical and live 1m OHLCV storage (Parquet) with query API"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.0",
  "python-dotenv>=1.0",
  "requests>=2.31",
  "pyyaml>=6.0",
  "pyarrow>=15.0",
  "duckdb>=0.10",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
vinu-stock-backfill = "vinu_stock.cli:backfill_main"
vinu-stock-ingest = "vinu_stock.cli:ingest_main"
vinu-stock-serve = "vinu_stock.cli:serve_main"
vinu-stock-query = "vinu_stock.cli:query_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vinu_stock*"]

[tool.setuptools.package-data]
vinu_stock = ["**/*.yaml", "**/*.sql", "server/static/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
